# shiny-guacamole

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install.sh  main  main.cpp  test.cpp
include/: context.hpp  environment.cpp  environment.hpp
shiny-guacamole/includes/: color.hpp  displayable.hpp  environment.hpp  point.hpp  shader.hpp  shape.hpp  square.hpp
shiny-guacamole/includes/2D/: circle.hpp  point.hpp  square.hpp  triangle.hpp
shiny-guacamole/includes/UI/: Interface.hpp
shiny-guacamole/shaders/: fragment.glsl  vertex.glsl
shiny-guacamole/src/: CMakeLists.txt  displayable.cpp  environment.cpp  point.cpp  shader.cpp  shape.cpp  square.cpp
shiny-guacamole/src/2D/: circle.cpp  point.cpp  square.cpp  triangle.cpp
src/: CMakeLists.txt  Makefile  Shape.cpp  Shape.hpp  camera.cpp  camera.hpp  cmake_install.cmake  color.cpp  color.hpp  environment.cpp  environment.hpp  magicArray.hpp  shape.cpp  shape.hpp  square.cpp  square.hpp  vectors.cpp  vectors.hpp  vectors2.hpp  vectors3.hpp  window.cpp  window.hpp
test/: main.cpp
